# nae

./: .gitignore  __init__.py  database_handle.py  default_config.py  file_handle.py  logger.py  pyproject.toml  readme.md  tag_handle.py  webui.py
nae/: database_handle.py  default_config.py  logger.py  tag_handle.py  ui.py  util.py  webui.py
nae/templates/: base.html  index.html
nae/templates/static/css/: style.css
templates/: album.html  base.html  index.html  player.html
templates/static/css/: style.css
templates/static/js/: player.js
